Fixed Large Layout shift

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'VT323';
+  src: url('VT323-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 /* Visually Hidden Class for Accessibility */
 .visually-hidden {
   border: 0;
